--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: Min Kyung Lee
-baseURL: https://example.com/
+baseURL: https://minlee.netlify.app/
 theme: hugo-resume
 languageCode: en-us
 PygmentsCodeFences: yes
